# amogus_sus_lethal_companus

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  globals.h  main.c  readme.txt  run_astyle.bat  window.c  window.h
amogus/: amogus.c  amogus.h
data structures/vec2/: vec2.h
src/: global_header.h  globals.c  globals.h  main.c  window.c  window.h
src/amogus/: amogus.c  amogus.h
src/audio/: audio.c  audio.h
src/data structures/vec2/: vec2.h
src/resources/: lethal_company_icecream_music.binh  vine_boom_sfx.binh
